# blue-bird

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/chat/: CMakeLists.txt  README.md  main.c
examples/chat/assets/: index.html
examples/chat/include/: app_handlers.h  app_html.h  app_repo.h  app_util.h  app_ws.h
examples/chat/src/: app_handlers.c  app_html.c  app_repo.c  app_util.c  app_ws.c
examples/hello/: CMakeLists.txt  README.md  main.c
examples/hello/include/: app_handlers.h  app_middleware.h
examples/hello/src/: app_handlers.c  app_middleware.c
modules/log/: CMakeLists.txt
modules/log/include/blue-bird/: console_logger.h  persist_logger.h
modules/log/include/blue-bird/log/: console_logger.h  log.h  persist_logger.h
modules/log/src/: console_logger.c  log.c  persist_logger.c
modules/log/tests/: CMakeLists.txt
modules/log/tests/integration/: test_persist_logger.c
modules/log/tests/unit/: test_logger.c
modules/persist/: CMakeLists.txt
modules/persist/include/blue-bird/: entity_json.h  key_val.h
modules/persist/include/blue-bird/key_val/: persist_file.h  persist_sqlite.h
modules/persist/include/blue-bird/persist/: repo.h  (+4 more)
modules/persist/src/key_val/: persist_file.c  persist_json.c  persist_registry.c  persist_sqlite.c
modules/persist/src/model/: entity_json.c  model_json.c  model_registry.c  model_sqlite.c  repo.c  schema.c
modules/persist/src/serialization/: entity_json.c
modules/persist/tests/: CMakeLists.txt
modules/persist/tests/integration/: test_key_val_backends.c  test_key_val_file_backend.c  test_key_val_sqlite_backend.c  test_model_json.c  test_model_sqlite.c  test_repo_backends.c
modules/persist/tests/unit/: test_entity_json.c  test_kv_persist.c  test_model_persist.c  test_repo.c  test_schema.c
modules/runtime/: CMakeLists.txt
modules/runtime/internal/: poller.h  scheduler.h  task_internal.h
modules/runtime/src/: loop.c  poller.c  runtime.c  scheduler.c  task.c
modules/runtime/tests/: CMakeLists.txt
modules/runtime/tests/integration/: test_pipeline.c
modules/runtime/tests/unit/: test_runtime.c  test_scheduler.c  test_task.c
modules/security/: CMakeLists.txt
modules/security/internal/: password_backend.h  random.h  security_internal.h  session_store.h
modules/security/src/: auth.c  password.c  random.c  session.c
modules/security/tests/: CMakeLists.txt  test_password.c  test_session.c
modules/security/tests/integration/: test_auth.c
modules/security/tests/unit/: test_password.c  test_session.c
modules/template/: CMakeLists.txt
modules/template/internal/: ast.h  parser.h  render_context.h  renderer.h  string_builder.h  template_internal.h
modules/template/src/: ast.c  parser.c  renderer.c  string_builder.c  template.c
modules/template/tests/: CMakeLists.txt
modules/template/tests/integration/: test_template.c
modules/utils/: CMakeLists.txt
modules/utils/include/blue-bird/: json.h
modules/utils/src/: asset.c  bb_config.c  encoding.c  hash.c  json.c  platform.c  time.c  uuid.c
modules/utils/tests/: CMakeLists.txt
modules/utils/tests/unit/: test_encoding.c  test_hash.c  test_json.c  test_time.c  test_uuid.c
modules/web/: CMakeLists.txt
modules/web/include/blue-bird/: client.h  middleware.h  router.h  server.h
modules/web/internal/: async_connection.h  client_internal.h  connection.h  middleware.h  router.h  server_internal.h
modules/web/internal/connection/: async_connection.h  async_tasks.h  conn_list.h  connection.h
modules/web/internal/http/: client_request.h  parser.h  server_request.h
modules/web/internal/websocket/: context.h  context_internal.h  frame.h  session.h  websocket_internal.h
modules/web/src/: async_connection.c  client.c  connection.c  executor.c  http.c  middleware.c  parser.c  router.c  server.c
modules/web/src/connection/: async_connection.c  async_tasks.c  conn_list.c  connection.c
modules/web/src/http/: client_request.c  client_response.c  message.c  request.c  response.c  server_request.c  server_response.c
modules/web/src/websocket/: client.c  context.c  frame.c  message.c  session.c  websocket.c  websocket_internal.c
modules/web/tests/: CMakeLists.txt  test_http_message.c  test_middleware.c  test_response.c  test_router.c  test_server_request.c  test_server_response.c
modules/web/tests/integration/: test_async_connection_integration.c  test_client_and_server.c  test_connection_integration.c  test_http_pipeline.c  test_websocket_pipeline.c
modules/web/tests/unit/: test_async_connection.c  test_connection.c  test_http_message.c  test_middleware.c  test_response.c  test_router.c  test_server_request.c  test_websocket.c  test_ws_context.c  test_ws_message.c
tests/: CMakeLists.txt  test_http.c  test_middleware.c  test_request.c  test_response.c  test_router.c
tests/cmake/: BlueBirdTests.cmake
tests/integration/: test_client.c  test_client_and_server.c  test_log.c  test_model_json.c  test_model_sqlite.c  test_persist_file_backend.c  test_persist_json_backend.c  test_persist_sqlite_backend.c  test_repo_backends.c  test_repo_json.c  test_repo_sqlite.c  test_runtime_pipeline.c  test_server.c
tests/integration/persist/: test_repo_backends.c
tests/integration/persist/key_val/: test_key_val_file_backend.c  test_key_val_json_backend.c  test_key_val_sqlite_backend.c
tests/integration/persist/model/: test_model_json.c  test_model_sqlite.c
tests/unit/: test_entity_json.c  test_http_message.c  test_json.c  test_middleware.c  test_model_persist.c  test_persist.c  test_repo.c  test_request.c  test_response.c  test_router.c  test_schema.c  test_server_response.c  test_time.c
tests/unit/core/: test_router.c  test_server_request.c
tests/unit/persist/: test_entity_json.c  test_kv_persist.c  test_model_persist.c  test_repo.c  test_schema.c
tests/unit/runtime/: test_loop.c  test_runtime.c  test_scheduler.c  test_task.c
tests/unit/template/: test_template.c
tests/unit/utils/: test_json.c  test_time.c  test_uuid.c
tests/unit/web/: test_http_message.c  test_middleware.c  test_router.c  test_server_request.c  test_server_response.c
(+176 files in other folders)
